--- a/src/XFood.Web/Pages/Check-List/EndCheck.razor
+++ b/src/XFood.Web/Pages/Check-List/EndCheck.razor
@@ -33,7 +33,7 @@
     }
 </style>
 
-<h3>Результаты проверки</h3>
+<h3 class="text-center">Результаты проверки</h3>
 
 @if (response != null && response.CheckList != null)
 {
