--- a/src/XFood.Web/Pages/Autorization/Login.razor
+++ b/src/XFood.Web/Pages/Autorization/Login.razor
@@ -65,7 +65,7 @@
         }
         else
         {
-            _error = result.Error;
+            _error = "Ошибка при авторизации, проверьте правильность введенных данных.";
             _showErrors = true;
         }
     }
