--- a/src/XFood.Web/Pages/Pizzeria/Criteria.razor
+++ b/src/XFood.Web/Pages/Pizzeria/Criteria.razor
@@ -12,7 +12,7 @@
 @if (response != null)
 {
     <div class="d-flex justify-content-between align-items-center mb-3">
-        <p><span class="oi oi-list-rich" aria-hidden="true"></span> Пиццерия: @response.Pizzeria?.Name</p>
+        <p><i class="bi bi-plus"></i> Пиццерия: @response.Pizzeria?.Name</p>
         <button class="btn btn-sm btn-success" @onclick="AddCriterion">
             <span class="oi oi-plus" aria-hidden="true"></span>   Добавить новый критерий
         </button>
@@ -53,10 +53,10 @@
                     </td>
                     <td>
                         <button class="btn btn-sm btn-success" @onclick="@(async () => await SaveNewCriterion())">
-                            <span class="oi oi-check" aria-hidden="true"></span>
+                            <i class="bi bi-check2"></i>
                         </button>
                         <button class="btn btn-sm btn-danger" @onclick="CancelAddCriterion">
-                            <span class="oi oi-x" aria-hidden="true"></span>
+                            <i class="bi bi-x-lg"></i>
                         </button>
                     </td>
                 </tr>
@@ -94,17 +94,17 @@
                             @if (firstCriterion != editedCriterion)
                             {
                                 <button class="btn btn-sm btn-primary" @onclick="@(async () => await EditCriterion(firstCriterion))">
-                                    <span class="oi oi-pencil" aria-hidden="true"></span>
+                                    <i class="bi bi-pencil"></i>
                                 </button>
                             }
                             else
                             {
                                 <button class="btn btn-sm btn-success" @onclick="@(async () => await SaveEditedCriterion(firstCriterion))">
-                                    <span class="oi oi-check" aria-hidden="true"></span>
+                                    <i class="bi bi-check2"></i>
                                 </button>
                             }
                             <button class="btn btn-sm btn-danger" @onclick="@(async () => await DeleteCriterion(firstCriterion))">
-                                <span class="oi oi-trash" aria-hidden="true"></span>
+                                <i class="bi bi-trash-fill"></i>
                             </button>
                         </td>
                     </tr>
@@ -135,17 +135,17 @@
                                 @if (criterion != editedCriterion)
                                 {
                                     <button class="btn btn-sm btn-primary" @onclick="@(async () => await EditCriterion(criterion))">
-                                        <span class="oi oi-pencil" aria-hidden="true"></span>
+                                        <i class="bi bi-pencil"></i>
                                     </button>
                                 }
                                 else
                                 {
                                     <button class="btn btn-sm btn-success" @onclick="@(async () => await SaveEditedCriterion(criterion))">
-                                        <span class="oi oi-check" aria-hidden="true"></span>
+                                        <i class="bi bi-check2"></i>
                                     </button>
                                 }
                                 <button class="btn btn-sm btn-danger" @onclick="@(async () => await DeleteCriterion(criterion))">
-                                    <span class="oi oi-trash" aria-hidden="true"></span>
+                                    <i class="bi bi-trash-fill"></i>
                                 </button>
                             </td>
                         </tr>
