--- a/src/XFood.Web/Shared/NavMenu.razor
+++ b/src/XFood.Web/Shared/NavMenu.razor
@@ -1,12 +1,12 @@
 ﻿<div class="@NavMenuCssClass nav-scrollable nav-menu-custom" @onclick="ToggleNavMenu">
     <nav class="flex-column side-bar">
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="stats">
+                Общая статистика
+            </NavLink>
             <AuthorizeView>
                 <NavLink class="nav-link" href="pizzerias">
                     Пиццерии
-                </NavLink>
-                <NavLink class="nav-link" href="stats">
-                    Общая статистика
                 </NavLink>
             </AuthorizeView>
             <AuthorizeView Roles="admin">
@@ -23,7 +23,7 @@
             </AuthorizeView>
             <AuthorizeView Roles="admin">
                 <NavLink class="nav-link" href="appeals">
-                    <span class="oi oi-bullhorn" aria-hidden="true"></span> Аппеляции
+                    Аппеляции
                 </NavLink>
             </AuthorizeView>
         </div>
