--- a/src/XFood.Web/Pages/Pizzeria/Pizzerias.razor
+++ b/src/XFood.Web/Pages/Pizzeria/Pizzerias.razor
@@ -8,7 +8,7 @@
 <div>
     <AuthorizeView Roles="admin">
         <a class="btn btn-sm btn-success" href="/pizzerias/create">
-            <span class="oi oi-plus" aria-hidden="true"></span>   Добавить пиццерию
+            <i class="bi bi-plus"></i>   Добавить пиццерию
         </a>
     </AuthorizeView>
 
