--- a/src/XFood.Web/Pages/Autorization/Register.razor
+++ b/src/XFood.Web/Pages/Autorization/Register.razor
@@ -64,7 +64,7 @@
 
         if (result.IsSuccess)
         {
-            NavigationManager.NavigateTo("/login", forceLoad: true);
+            NavigationManager.NavigateTo("/login");
         }
         else
         {
