--- a/src/XFood.Web/Pages/Default/Index.razor
+++ b/src/XFood.Web/Pages/Default/Index.razor
@@ -1,14 +1,5 @@
-﻿<PageTitle>Index</PageTitle>
+﻿@page "/"
+<PageTitle>Index</PageTitle>
 
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
-
-<AuthorizeView Roles="admin">
-    <div>"Если вы это читаете то вы админ"</div>
-</AuthorizeView>
-<AuthorizeView Roles="user">
-    <div>"Если вы это читаете то вы обычный пользователь, фу"</div>
-</AuthorizeView>
+<h1 class="text-center fs-3 mt-5">Добро пожаловать!</h1>
+<img class="align-baseline mw-100" src="images/logoOrangeHorizontal.png" alt="logo" style="display:flex ;margin-top : 100px ; margin-left :auto; margin-right:auto;">
