--- a/src/XFood.Web/Pages/Pizzeria/Criteria.razor
+++ b/src/XFood.Web/Pages/Pizzeria/Criteria.razor
@@ -12,7 +12,7 @@
 @if (response != null)
 {
     <div class="d-flex justify-content-between align-items-center mb-3">
-        <p><i class="bi bi-plus"></i> Пиццерия: @response.Pizzeria?.Name</p>
+        <p>Пиццерия: @response.Pizzeria?.Name</p>
         <button class="btn btn-sm btn-success" @onclick="AddCriterion">
             <span class="oi oi-plus" aria-hidden="true"></span>   Добавить новый критерий
         </button>
