--- a/src/XFood.Web/Pages/User/Profile.razor
+++ b/src/XFood.Web/Pages/User/Profile.razor
@@ -27,16 +27,28 @@
                             @if(checkList.EndCheck == null)
                             {
                                 <div class="col-md-3"><span class="badge bg-warning rounded-pill"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-battery-half" viewBox="0 0 16 16">
-  <path d="M2 6h5v4H2z"/>
-  <path d="M2 4a2 2 0 0 0-2 2v4a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2zm10 1a1 1 0 0 1 1 1v4a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V6a1 1 0 0 1 1-1zm4 3a1.5 1.5 0 0 1-1.5 1.5v-3A1.5 1.5 0 0 1 16 8"/>
-</svg></span></div>
+                                  <path d="M2 6h5v4H2z"/>
+                                  <path d="M2 4a2 2 0 0 0-2 2v4a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2zm10 1a1 1 0 0 1 1 1v4a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V6a1 1 0 0 1 1-1zm4 3a1.5 1.5 0 0 1-1.5 1.5v-3A1.5 1.5 0 0 1 16 8"/>
+                                </svg></span></div>
                             }
                             @if(checkList.EndCheck != null)
                             {
                                 <div class="col-md-3"><span class="badge bg-success rounded-pill"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-battery-full" viewBox="0 0 16 16">
-  <path d="M2 6h10v4H2z"/>
-  <path d="M2 4a2 2 0 0 0-2 2v4a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2zm10 1a1 1 0 0 1 1 1v4a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V6a1 1 0 0 1 1-1zm4 3a1.5 1.5 0 0 1-1.5 1.5v-3A1.5 1.5 0 0 1 16 8"/>
-</svg></span></div>
+                                  <path d="M2 6h10v4H2z"/>
+                                  <path d="M2 4a2 2 0 0 0-2 2v4a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2zm10 1a1 1 0 0 1 1 1v4a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V6a1 1 0 0 1 1-1zm4 3a1.5 1.5 0 0 1-1.5 1.5v-3A1.5 1.5 0 0 1 16 8"/>
+                                </svg></span></div>
+                            }
+                            @if (checkList.EndCheck == null)
+                            {
+                                <div class="col-md-3">
+                                    <a href="@($"checkWork/{checkList.Id}")" class="btn btn-primary">Проверить работу</a>
+                                </div>
+                            }
+                            else
+                            {
+                                <div class="col-md-3">
+                                    <a href="@($"checkList/{checkList.Id}")" class="btn btn-primary">Подробнее</a>
+                                </div>
                             }
                         </div>
                     </li>
