--- a/src/XFood.Web/Shared/NavMenu.razor
+++ b/src/XFood.Web/Shared/NavMenu.razor
@@ -1,9 +1,13 @@
 ﻿<div class="@NavMenuCssClass nav-scrollable nav-menu-custom" @onclick="ToggleNavMenu">
     <nav class="flex-column side-bar">
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/">
+                <i class="bi bi-house"></i>
+            </NavLink>
             <NavLink class="nav-link" href="stats">
                 Общая статистика
             </NavLink>
+            
             <AuthorizeView>
                 <NavLink class="nav-link" href="pizzerias">
                     Пиццерии
@@ -24,6 +28,9 @@
             <AuthorizeView Roles="admin">
                 <NavLink class="nav-link" href="appeals">
                     Аппеляции
+                </NavLink>
+                <NavLink class="nav-link" href="checkList/create">
+                    Назначить проверку
                 </NavLink>
             </AuthorizeView>
         </div>
