--- a/src/XFood.Web/Pages/Managers/Managers.razor
+++ b/src/XFood.Web/Pages/Managers/Managers.razor
@@ -11,105 +11,111 @@
 
 <div class="d-flex">
     <h3>Список менеджеров</h3>
-<button type="button" class="btn btn-success ms-auto" data-bs-toggle="modal" data-bs-target="#exampleModal2">Добавить менеджера</button>
+    <input type="text" @bind="searchTerm" @bind:event="oninput" @onkeyup="async ()=>await Search()" placeholder="Search..." class="form-control ms-2 me-auto">
+    <button type="button" class="btn btn-success ms-auto" data-bs-toggle="modal" data-bs-target="#exampleModal2">Добавить менеджера</button>
+    
 </div>
 <table class="table hovered text-center">
     <thead>
-        <tr>
-            <th>Имя</th>
-            <th>Фамилия</th>
-            <th>Действие</th>
-        </tr>
+    <tr>
+        <th>Имя</th>
+        <th>Фамилия</th>
+        <th>Действие</th>
+    </tr>
     </thead>
     <tbody>
 
-        @if (managers != null)
+    @if (managers != null)
+    {
+        @foreach (var m in managers.List)
         {
-            @foreach (var m in managers.List)
-            {
-                <tr>
-                    <td>@m.FirstName</td>
-                    <td>@m.LastName</td>      
-                    <td>
-                        <a class="btn btn-warning" href="@($"manager/{m.Id}")"><i class="bi bi-eye-fill"></i></a>
-                        <a class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal" @onclick="@(async () => await SetSelectedManager(m))" ><i class="bi bi-trash3-fill"></i></a>
-                    </td>
-                </tr>
-            }
+            <tr>
+                <td>@m.FirstName</td>
+                <td>@m.LastName</td>
+                <td>
+                    <a class="btn btn-warning" href="@($"manager/{m.Id}")">
+                        <i class="bi bi-eye-fill"></i>
+                    </a>
+                    <a class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal" @onclick="@(async () => await SetSelectedManager(m))">
+                        <i class="bi bi-trash3-fill"></i>
+                    </a>
+                </td>
+            </tr>
         }
-        else
-        {
-            <span>Нету данных</span>
-        }
+    }
+    else
+    {
+        <span>Нету данных</span>
+    }
     </tbody>
 </table>
 
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-         <p>Вы действительно хотите удалить этого менеджера?</p>
-      </div>
-      <div class="modal-footer">
-          <button type="button" @onclick="DeleteManager" data-bs-dismiss="modal" class="btn btn-primary">Да</button>
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Нет</button>
-      </div>
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <p>Вы действительно хотите удалить этого менеджера?</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" @onclick="DeleteManager" data-bs-dismiss="modal" class="btn btn-primary">Да</button>
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Нет</button>
+            </div>
+        </div>
     </div>
-  </div>
 </div>
 
 
 <div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h1 class="modal-title fs-5" id="exampleModalLabel">Добавить менеджера</h1>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <div class="mb-3">
-          <label for="exampleFormControlInput1" class="form-label">First Name:</label>
-          <input type="text" class="form-control" id="exampleFormControlInput1" @bind="@FirstName">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="exampleModalLabel">Добавить менеджера</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label">First Name:</label>
+                    <input type="text" class="form-control" id="exampleFormControlInput1" @bind="@FirstName">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label">Last Name:</label>
+                    <input type="text" class="form-control" id="exampleFormControlInput1" @bind="@LastName">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label">Telegram:</label>
+                    <input type="text" class="form-control" id="exampleFormControlInput1" @bind="@Telegram">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label">Email:</label>
+                    <input type="email" class="form-control" id="exampleFormControlInput1" @bind="@Email">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label">Pizzerias:</label>
+                    <select class="form-select" @bind="@PizzeriaId">
+                        <option>Выберите пиццерию</option>
+                        @if (pizzeriaResponse != null)
+                        {
+                            @foreach (var pizzeria in pizzeriaResponse.List)
+                            {
+                                <option value="@pizzeria.Id">@pizzeria.Name</option>
+                            }
+                        }
+                        else
+                        {
+                            <option>Нету данных</option>
+                        }
+                    </select>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" @onclick="CreateManager" data-bs-dismiss="modal" class="btn btn-primary">Добавить</button>
+            </div>
         </div>
-        <div class="mb-3">
-          <label for="exampleFormControlInput1" class="form-label">Last Name:</label>
-          <input type="text" class="form-control" id="exampleFormControlInput1" @bind="@LastName">
-        </div>
-        <div class="mb-3">
-          <label for="exampleFormControlInput1" class="form-label">Telegram:</label>
-          <input type="text" class="form-control" id="exampleFormControlInput1" @bind="@Telegram">
-        </div>
-        <div class="mb-3">
-          <label for="exampleFormControlInput1" class="form-label">Email:</label>
-          <input type="email" class="form-control" id="exampleFormControlInput1" @bind="@Email">
-        </div>
-        <div class="mb-3">
-          <label for="exampleFormControlInput1" class="form-label">Pizzerias:</label>
-        <select class="form-select" @bind="@PizzeriaId">
-             <option>Выберите пиццерию</option>
-            @if(pizzeriaResponse != null)
-            {
-                @foreach (var pizzeria in pizzeriaResponse.List)
-                {
-                    <option value="@pizzeria.Id">@pizzeria.Name</option>
-                }
-            }
-            else
-            {
-                    <option>Нету данных</option>
-            }
-        </select>
-        </div>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" @onclick="CreateManager" data-bs-dismiss="modal" class="btn btn-primary">Добавить</button>
-      </div>
     </div>
-  </div>
 </div>
 
 @code {
@@ -127,26 +133,36 @@
 
     GetListPizzeriaResponse pizzeriaResponse;
 
+    private string searchTerm; // Added search term field
 
     protected override async Task OnInitializedAsync()
     {
         await RefreshManagersList();
         pizzeriaResponse = await PizzeriaService.GetListPizzeria(new GetListPizzeriaRequest());
     }
+    
+    private async Task Search()
+    {
+        managers = await ManagerService.GetManagers(new GetManagersRequest { SearchTerm = searchTerm });
+    }
+
     private async Task DeleteManager()
     {
         deleteManagersRequest.Id = managerView.Id;
         deleteManagersResponse = await ManagerService.Delete(deleteManagersRequest);
         await RefreshManagersList();
     }
+
     private async Task RefreshManagersList()
     {
         managers = await ManagerService.GetManagers(new GetManagersRequest());
     }
+
     private async Task SetSelectedManager(ManagerView manager)
     {
         managerView = manager;
     }
+
     private async Task CreateManager()
     {
         createManagerRequest.FirstName = FirstName;
@@ -159,5 +175,5 @@
         PizzeriaId = 0;
         await RefreshManagersList();
     }
-}
 
+}
