--- a/src/XFood.Web/wwwroot/css/style.css
+++ b/src/XFood.Web/wwwroot/css/style.css
@@ -106,3 +106,6 @@ main {
     background: linear-gradient(to right, rgba(132, 250, 176, 0.5), rgba(143, 211, 244, 0.5));
 }
 
+.custom-modal-dialog {
+    max-width: 90%; 
+}
